# spark-databricks-study

./: .env.example  .gitignore  01-Interview-Overview-and-Strategy.md  02-Databricks-Free-Edition-Serverless-Gotchas.md  03-Spark-Mental-Models.md  04-Spark-Optimization-Playbook.md  05-Spark-Optimization-Challenge.md  06-Python-Feature-Dev-Challenge.md  07-AI-Stewardship-Genie-Code.md  08-Mock-QA-and-Talking-Points.md  09-Cheatsheet-PySpark.md  10-Hands-On-Lab-Index.md  11-Local-PySpark-Setup-uv.md  12-Delta-Lake-Deep-Dive.md  13-Spark-SQL-Drills.md  14-Data-Engineering-Patterns.md  15-Common-Spark-Errors-Debug.md  16-Additional-Spark-Challenges.md  17-Additional-Python-Challenges.md  18-Timed-Speed-Drills.md  19-Self-Assessment-Rubric.md  LICENSE  README.md  mise.toml  pyproject.toml  skills-lock.json
.claude/skills/: databricks-core  databricks-dabs  databricks-model-serving  databricks-serverless-migration  databricks-vector-search
.github/: copilot-instructions.md
databricks-fde-prep/: FLASHCARDS.md  PRIORITIES.md  README.md  SETUP.md  STUDY-PACK.md  mise.toml
databricks-fde-prep/notebooks/: slow_spark_app_BROKEN.py  slow_spark_app_SOLUTION.py  slow_spark_app_practice.v1.py
notebooks/databricks/: 01_environment_check.py  02_spark_fundamentals.py  03_optimization_challenge_start.py  04_optimization_challenge_solution.py  05_broadcast_and_skew.py  (+3 more)
scripts/: generate_lessons.py  generate_lessons_b.py  init-env.sh  teach.py  to_ipynb.sh
teach/: CURRICULUM.md  MISSION.md  NOTES.md  RESOURCES.md
webapp/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+29 files in other folders)
